# ankurah

./: .gitignore  .liaison.toml  .taplo.toml  CLAUDE.md  Cargo.toml  DESIGN_GOALS.md  GETTING_STARTED.md  GLOSSARY.md  LONG_TERM_ASPIRATION.md  README.md  RELEASES  STRUCTURED_ERRORS_STATE.md  docker-compose.yml  review-pass-1.txt  rustfmt.toml  updatable_predicates_plan.md
ankql/: Cargo.toml
ankql/examples/: pubsub1.rs  pubsub2.rs
ankql/src/: ankql.pest  ast.rs  collation.rs  conversion.rs  error.rs  grammar.rs  lib.rs  parser.rs  resolve.rs  selection.rs
ankql/src/selection/: filter.rs  sql.rs
ankurah/: Cargo.toml  refactor_plan.md
ankurah/src/: lib.rs
benchmarks/: Cargo.toml
benchmarks/benches/: common.rs  single_node.rs  sprout_postgres_local.rs  sprout_postgres_websocket.rs  sprout_sled_local.rs
benchmarks/src/: lib.rs
benchmarks/src/sprout/: config.rs  factories.rs  instrumentation.rs  mod.rs  runner.rs  workloads.rs
connectors/: Cargo.toml
connectors/iroh/: Cargo.toml
connectors/iroh/src/: client.rs  connection.rs  lib.rs  sender.rs  server.rs
connectors/iroh/tests/: iroh.rs
connectors/local-process/: Cargo.toml
connectors/local-process/src/: lib.rs
connectors/src/: lib.rs  tcp.rs
connectors/src/tcp/: client.rs  connection.rs  frame.rs  listener.rs  tests.rs  tls.rs
connectors/websocket-client/: Cargo.toml
connectors/websocket-client-wasm/: Cargo.toml
connectors/websocket-client-wasm/src/: client.rs  connection.rs  connection_state.rs  lib.rs
connectors/websocket-client/src/: client.rs  lib.rs  sender.rs
connectors/websocket-server/: Cargo.toml
connectors/websocket-server/src/: client_ip.rs  lib.rs  sender.rs  server.rs  state.rs  user_agent.rs
core/: Cargo.toml  SUBSCRIPTION.md  orderby_limit_plan.md
core-types/: Cargo.toml
core-types/src/: entity_id.rs  error.rs  lib.rs  model_id.rs  property_id.rs  value.rs  value_type.rs
core/benches/: BASELINE.md  README.md  baseline-main-benches.patch  event_dag.rs
core/docs/: subscriptions.md
core/examples/: example1.rs  test.rs
core/src/: attestation.rs  bench_support.rs  changes.rs  collation.rs  collection.rs  collectionset.rs  comparision_index.rs  comparison_index.rs  connector.rs  context.rs  core.rs  databroker.rs  datagetter.rs  edge.rs  entity.rs  error.rs  error_old.rs  event.rs  getdata.rs  human_id.rs  lib.rs  lineage.rs  livequery.rs  model.rs  node.rs  node_applier.rs  node_key.rs  operation.rs  policy.rs  query_value.rs  reactor.rs  reactor_test.rs  registry.rs  resultset.rs  retrieval.rs  retrieve.rs  schema.rs  storage.rs  storage_commit.rs  storage_fence.rs  (+10 more)
core/src/causal_dag/: compare.rs  forward_view.rs  misc.rs  mod.rs  relation.rs  tests.rs
core/src/connector/: local_process.rs
core/src/consistency/: diff_resolver.rs  mod.rs
core/src/entity/: transaction.rs
core/src/error/: internal.rs  mod.rs
core/src/event_dag/: accumulator.rs  causal_context.rs  comparison.rs  frontier.rs  layers.rs  (+8 more)
core/tests/: basic.rs  common.rs  inter_node.rs  local_subscription.rs  pg_common.rs  postgres.rs  reactor.rs  repeatable_read.rs  where_clause.rs
derive/: Cargo.toml
derive/default_backends/: README.md  lww.ron  yrs.ron
derive/src/: backends.rs  lib.rs  model.rs  predicate.rs  property.rs  selection.rs  wasm_signal.rs  wrapper_macros.rs
docs/example/: Cargo.toml  rustfmt.toml
examples/leptos-app/: .gitignore  Cargo.toml
examples/model/: Cargo.toml
examples/server/: Cargo.toml
examples/wasm-bindings/: Cargo.toml
extensions/jwt-auth/: Cargo.toml  README.md
proto/: Cargo.toml
proto/src/: auth.rs  clock.rs  collection.rs  data.rs  entity_id.rs  error.rs  human_id.rs  id.rs  impls.rs  lib.rs  message.rs  model_id.rs  node_id.rs  peering.rs  postgres.rs  record.rs  record_id.rs  request.rs  schema_id.rs  subscription.rs  sys.rs  time.rs  transaction.rs  update.rs  wasm.rs
proto/tests/: bincode_fixtures.rs  yrs_v2_fixtures.rs
react-signals/: Cargo.toml  TODOs.md
react-signals/src/: lib.rs  react_binding.rs
signals/: Cargo.toml  README.md  leptos-questions.md  tasks.md
signals/src/: broadcast.rs  context.rs  core.rs  jsvalue.rs  lib.rs  map.rs  memo.rs  mutable.rs  observer.rs  porcelain.rs  react.rs  react_native.rs  reactive_graph.rs  read.rs  signal.rs  subscription.rs  traits.rs  value.rs
signals/tests/: basic.rs  common.rs  observer.rs  observer_context.rs
storage/common/: Cargo.toml  planner_tasks.md
storage/indexeddb-wasm/: Cargo.toml  indexeddb_update_details.md  indexing_plan_indexeddb.md
storage/postgres/: Cargo.toml
test-browser/: Cargo.toml
test-browser/.cargo/: config.toml
test-browser/src/: lib.rs
test-browser/tests/: basic.rs  common.rs
tests/: Cargo.toml  predicate_cases.json
tests/benches/: lane_perf.rs  macro_perf.rs
tests/src/: common.rs  forge.rs  gen.rs  lib.rs
tests/tests/: add_event.rs  adversarial_wire.rs  basic.rs  bridge_policy.rs  canonical_type.rs  catalog_genesis_relay.rs  catalog_map.rs  check_request_error.rs  commit_atomicity.rs  common.rs  concurrent_transactions.rs  crash_window_replay.rs  dag_auditing.rs  derive_compile_fail.rs  desc_inequality.rs  determinism.rs  durable_ephemeral.rs  durable_peer_determinism.rs  edge_cases.rs  edges.rs  epoch_flip.rs  gclock_rehydration.rs  generation_admission.rs  generation_stamping.rs  get_path_visibility.rs  identity_attestation.rs  inter_node.rs  json_livequery.rs  limit_gap_filling.rs  local_subscription.rs  lww_causal_register.rs  lww_resolution.rs  multi_ephemeral.rs  nonexistent_entity.rs  noop_delta_cost.rs  notifications.rs  pagination_cursor.rs  persist_marker.rs  pg_common.rs  pg_json_property.rs  (+51 more)
wasm-integration-tests/: Cargo.toml
wasm-integration-tests/src/: lib.rs
wasm-integration-tests/tests/: index.html  package.json  playwright.config.ts  tsconfig.json
wasm-signal/: Cargo.toml  TODOs.md
wasm-signal/src/: lib.rs  react_binding.rs
web-client/: Cargo.toml
web-client/src/: cb_future.rs  cb_stream.rs  client.rs  connection.rs  connection_state.rs  indexeddb.rs  lib.rs  utils.rs
web-client/tests/: client_server.rs
(+577 files in other folders)
