[workspace]
members = [
    "core",
    "derive",
    "proto",
    "examples/wasm-bindings",
    "examples/model",
    # "examples/leptos-app",
    "examples/server",
    "docs/example/model",
    "docs/example/server",
    "docs/example/wasm-bindings",
    "ankql",
    "connectors/*",
    "storage/*",
    "tests",
    "ankurah",
    "signals",
]
resolver = "2"

[profile.dev]
opt-level       = 0
debug           = true
split-debuginfo = "unpacked"

[profile.release]
opt-level     = 3
debug         = false
lto           = true
codegen-units = 1
panic         = "abort"
strip         = true
