[workspace]
members = [
    "core",
    "derive",
    "proto",
    "examples/model",
    # "examples/leptos-app",
    "examples/server",
    "docs/example/model",
    "docs/example/server",
    "ankql",
    "connectors/*",
    "storage/*",
    "tests",
    "ankurah",
    "signals",
]
# Exclude wasm crates - they cause feature unification issues and are tested
# separately via wasm-pack. See https://github.com/ankurah/ankurah/issues/211
exclude = [
    "connectors/websocket-client-wasm",
    "storage/indexeddb-wasm",
    "examples/wasm-bindings",
    "docs/example/wasm-bindings",
    "tests-wasm",
]
resolver = "2"

[profile.dev]
opt-level       = 0
debug           = true
split-debuginfo = "unpacked"

[profile.release]
opt-level     = 3
debug         = false
lto           = true
codegen-units = 1
panic         = "abort"
strip         = true
