[workspace]
members = [
    "core",
    "derive",
    "proto",
    "examples/wasm-bindings",
    "examples/model",
    # "examples/leptos-app",
    "examples/server",
    "docs/example/model",
    "docs/example/server",
    "docs/example/wasm-bindings",
    "ankql",
    "connectors/*",
    "storage/*",
    "tests",
    "tests-wasm/bindings",
    "ankurah",
    "signals",
]

# Use default-members to exclude wasm crates from `cargo test` - they are tested
# separately via wasm-pack. See https://github.com/ankurah/ankurah/issues/211
default-members = [
    "core",
    "derive",
    "proto",
    "examples/model",
    "examples/server",
    "docs/example/model",
    "docs/example/server",
    "ankql",
    "connectors/websocket-client",
    "connectors/websocket-server",
    "storage/sled",
    "storage/postgres",
    "storage/sqlite",
    "tests",
    "ankurah",
    "signals",
]

resolver = "2"

[profile.dev]
opt-level       = 0
debug           = true
split-debuginfo = "unpacked"

[profile.release]
opt-level     = 3
debug         = false
lto           = true
codegen-units = 1
panic         = "abort"
strip         = true
