[package]
name    = "ankql"
version = "0.1.0"
edition = "2021"

[dependencies]
pest        = { version = "2.7.15", features = ["pretty-print"] }
pest_derive = "2.7.15"
log         = "0.4"
thiserror   = "2.0"
serde       = { version = "1.0", features = ["derive"] }

[dev-dependencies]
env_logger = "0.11.5"
