[package]
name          = "ankql"
version       = "0.7.12"
edition       = "2021"
description   = "Ankurah Query Language - Aspirational query language for Ankurah in the style of Open Cypher and GQL (ISO/IEC 39075:2024)"
license       = "MIT OR Apache-2.0"
documentation = "https://docs.rs/ankql"
homepage      = "https://github.com/ankurah/ankurah"
repository    = "https://github.com/ankurah/ankurah"

[features]
wasm = ["dep:wasm-bindgen"]

[dependencies]
pest        = { version = "2.7.15", features = ["pretty-print"] }
pest_derive = "2.7.15"
log         = "0.4"
thiserror   = "2.0"
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
tracing     = "0.1"
ulid        = { version = "1.1", features = ["serde"] }
base64      = { version = "0.22" }

# WASM dependencies
wasm-bindgen = { version = "0.2", optional = true }

[dev-dependencies]
env_logger = "0.11.5"
anyhow     = "1.0"
