[package]
name          = "ankurah"
version       = "0.5.2"
edition       = "2021"
description   = "Observable, event-driven state management for native and web"
license       = "MIT OR Apache-2.0"
readme        = "../README.md"
documentation = "https://docs.rs/ankurah"
homepage      = "https://github.com/ankurah/ankurah"
repository    = "https://github.com/ankurah/ankurah"

[features]
wasm = [
    "derive",
    "ankurah-derive?/wasm",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:js-sys",
    "ankurah-core/wasm",
    "ankurah-proto/wasm",
    "ankurah-signals/wasm",
    "dep:send_wrapper",
]
react = ["wasm", "ankurah-signals/react"]
derive = ["dep:ankurah-derive"]
instrument = ["ankurah-core/instrument"]

[dependencies]
ankurah-core    = { path = "../core", version = "^0.5.2" }
ankurah-proto   = { path = "../proto", version = "^0.5.2" }
ankurah-derive  = { path = "../derive", version = "^0.5.2", optional = true }
ankurah-signals = { path = "../signals", version = "^0.5.2" }
ankql           = { path = "../ankql", version = "^0.5.2" }
serde_json      = { version = "1.0" }
serde           = { version = "1.0" }
tracing         = { version = "0.1.40" }
# Dependencies needed for derive macros
wasm-bindgen         = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys               = { version = "0.3", optional = true }
send_wrapper         = { version = "0.6", optional = true }

[dev-dependencies]
ankurah-storage-sled            = { path = "../storage/sled" }
tokio                           = { version = "1.40", features = ["full"] }
ankurah-connector-local-process = { path = "../connectors/local-process" }
