[package]
name = "ankurah-benchmarks"
version = "0.1.0"
edition = "2024"

[[bench]]
name = "single_node"
harness = false

[[bench]]
name = "sprout_postgres_websocket"
harness = false

[dependencies]
ankurah = { path = "../ankurah", features = ["derive"] }
ankurah-core = { path = "../core" }
ankurah-storage-sled = { path = "../storage/sled" }
ankurah-storage-postgres = { path = "../storage/postgres" }
ankurah-connector-local-process = { path = "../connectors/local-process" }
ankurah-websocket-server = { path = "../connectors/websocket-server" }
ankurah-websocket-client = { path = "../connectors/websocket-client" }
ankql = { path = "../ankql" }
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ctor = "0.6"

# Optional postgres dependencies
bb8 = { version = "0.9" }
bb8-postgres = { version = "0.9" }
tokio-postgres = { version = "0.7" }
testcontainers = { version = "0.23" }
testcontainers-modules = { version = "0.11", features = ["postgres", "blocking"] }
postgres = { version = "0.19" }

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
futures = "0.3"
