[package]
name          = "ankurah-core"
description   = "Core state management functionality for Ankurah"
version       = "0.5.4"
edition       = "2021"
license       = "MIT OR Apache-2.0"
documentation = "https://docs.rs/ankurah-core"
homepage      = "https://github.com/ankurah/ankurah"
repository    = "https://github.com/ankurah/ankurah"

[features]
wasm       = ["wasm-bindgen", "wasm-bindgen-futures", "serde-wasm-bindgen", "ankurah-proto/wasm"]
default    = []
instrument = []

[dependencies]
# Internal dependencies
ankurah-derive = { path = "../derive", optional = true, version = "^0.5.4" }
ankql          = { path = "../ankql", version = "^0.5.4" }
ankurah-proto  = { path = "../proto", version = "^0.5.4" }
ankurah-signals = { path = "../signals", version = "^0.5.4" }

rand                 = "0.8"
anyhow               = "1.0"
thiserror            = "2"
chrono               = { version = "0.4", default-features = false }
futures-signals      = "0.3"
serde                = "1.0"
ulid                 = { version = "1.1", features = ["serde"] }
tracing              = { version = "0.1.40", features = ["max_level_debug", "release_max_level_warn"] }
bincode              = "1.3.3"
append-only-vec      = "0.1"
async-trait          = "0.1"
yrs                  = "0.24.0"
tokio                = { version = "1.40", default-features = false, features = ["sync", "rt", "time", "macros"] }
futures              = "0.3"
futures-util         = "0.3"
wasm-bindgen         = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
serde-wasm-bindgen   = { version = "0.6", optional = true }
serde_json           = "1.0"
smallvec             = "1.15.0"

[dev-dependencies]
