[package]
name          = "ankurah-derive"
version       = "0.2.1"
edition       = "2021"
description   = "Ankurah Derive - Derive macros for Ankurah"
license       = "MIT OR Apache-2.0"
documentation = "https://docs.rs/ankurah-derive"
homepage      = "https://github.com/ankurah/ankurah"
repository    = "https://github.com/ankurah/ankurah"

[features]
default = []
wasm    = []

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote       = "1.0"
syn         = { version = "2.0", features = ["extra-traits"] }
