[package]
name          = "ankurah-derive"
version       = "0.7.9"
edition       = "2021"
description   = "Ankurah Derive - Derive macros for Ankurah"
license       = "MIT OR Apache-2.0"
documentation = "https://docs.rs/ankurah-derive"
homepage      = "https://github.com/ankurah/ankurah"
repository    = "https://github.com/ankurah/ankurah"

[features]
default = []
wasm    = ["ankql/wasm"]
js      = []             # Do not use - to be removed when we removed the vendored tsify internals

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", default-features = false, features = [
    "full",
    "parsing",
    "printing",
    "proc-macro",
    "extra-traits",
] }
serde_derive_internals = "0.29"
ankql = { path = "../ankql", version = "^0.7.9" }
regex = "1.0"
ron = "0.11"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
maplit = "1.0"
