[package]
name        = "ankurah-proto"
description = "Inter-node communication protocol for Ankurah"
version     = "0.1.0"
edition     = "2021"

[dependencies]
anyhow             = "1.0.86"
bincode            = "1.3.3"
bytes              = { version = "1.6.1", features = ["serde"] }
chrono             = { version = "0.4.38", features = ["serde"] }
serde              = { version = "1.0.204", features = ["derive"] }
serde-wasm-bindgen = "0.6"
ulid               = { version = "1.1.3", features = ["serde", "uuid"] }
uuid               = { version = "1.7.0", features = ["serde", "v4"] }
wasm-bindgen       = { version = "0.2.92", features = ["serde"] }
base64             = { version = "0.22" }
ankql              = { path = "../ankql" }
