[package]
name          = "ankurah-proto"
description   = "Inter-node communication protocol for Ankurah"
version       = "0.4.2"
edition       = "2021"
license       = "MIT OR Apache-2.0"
documentation = "https://docs.rs/ankurah-proto"
homepage      = "https://github.com/ankurah/ankurah"
repository    = "https://github.com/ankurah/ankurah"

[features]
default  = ["wasm"]
postgres = ["dep:postgres-types", "dep:postgres-protocol", "dep:fallible-iterator"]
wasm     = ["dep:wasm-bindgen", "dep:js-sys"]

[dependencies]
anyhow             = "1.0.86"
bincode            = "1.3.3"
bytes              = { version = "1.6.1", features = ["serde"] }
chrono             = { version = "0.4.38", features = ["serde"] }
serde              = { version = "1.0.204", features = ["derive"] }
serde-wasm-bindgen = "0.6"
ulid               = { version = "1.1.3", features = ["serde"] }
base64             = { version = "0.22" }
ankql              = { path = "../ankql", version = "^0.4.2" }
sha2               = "0.10.8"
postgres-types     = { version = "0.2", optional = true }
postgres-protocol  = { version = "0.6", optional = true }
fallible-iterator  = { version = "0.2", optional = true }                # has to be 0.2 to match postgres-protocol

wasm-bindgen = { version = "0.2.92", features = ["serde"], optional = true }
js-sys       = { version = "0.3.69", optional = true }
