[package]
name          = "ankurah-proto"
description   = "Inter-node communication protocol for Ankurah"
version       = "0.7.21"
edition       = "2021"
license       = "MIT OR Apache-2.0"
documentation = "https://docs.rs/ankurah-proto"
homepage      = "https://github.com/ankurah/ankurah"
repository    = "https://github.com/ankurah/ankurah"

[features]
default  = []
postgres = ["dep:postgres-types", "dep:postgres-protocol", "dep:fallible-iterator"]
wasm     = ["dep:wasm-bindgen", "dep:js-sys", "dep:serde-wasm-bindgen"]
uniffi   = ["dep:uniffi"]

[dependencies]
anyhow             = "1.0.86"
bincode            = "1.3.3"
bytes              = { version = "1.6.1", features = ["serde"] }
chrono             = { version = "0.4.38", default-features = false, features = ["serde"] }
serde              = { version = "1.0.204", features = ["derive"] }
serde-wasm-bindgen = { version = "0.6", optional = true }
ulid               = { version = "1.1.3", features = ["serde"] }
base64             = { version = "0.22" }
ankql              = { path = "../ankql", version = "=0.7.21" }
sha2               = "0.10.8"
postgres-types     = { version = "0.2", optional = true }
postgres-protocol  = { version = "0.6", optional = true }
fallible-iterator  = { version = "0.2", optional = true }                                   # has to be 0.2 to match postgres-protocol

wasm-bindgen = { version = "0.2.92", features = ["serde"], optional = true }
js-sys       = { version = "0.3.69", optional = true }
uniffi       = { version = "0.29", optional = true }
thiserror    = "1.0"

[dev-dependencies]
serde_json = "1.0"
