[package]
name    = "ankurah-react-signals"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
futures-signals = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
ankurah-derive = { path = "../derive", version = "0.1.0" }
reactive_graph = { version = "0.1.4", features = [
    "effects",
] }
any_spawner = { version = "0.2.0", features = [
    "wasm-bindgen",
] }
log = "0.4.22"
or_poisoned = "0.1.0"
