[package]
name          = "ankurah-react-signals"
version       = "0.5.1"
edition       = "2021"
description   = "Observe ankurah state with signals in react"
license       = "MIT OR Apache-2.0"
documentation = "https://docs.rs/ankurah-react-signals"
homepage      = "https://github.com/ankurah/ankurah"
repository    = "https://github.com/ankurah/ankurah"

[dependencies]
futures              = "0.3"
wasm-bindgen         = "0.2"
wasm-bindgen-futures = "0.4"
js-sys               = "0.3"
ankurah-derive       = { path = "../derive", version = "^0.5.1", features = ["wasm"] }
ankurah-signals      = { path = "../signals", version = "^0.5.1" }
log                  = "0.4.22"
or_poisoned          = "0.1.0"
