[package]
name          = "ankurah-signals"
version       = "0.7.12"
edition       = "2024"
description   = "Ankurah Signals"
license       = "MIT OR Apache-2.0"
documentation = "https://docs.rs/ankurah-storage-indexeddb-wasm"
homepage      = "https://github.com/ankurah/ankurah"
repository    = "https://github.com/ankurah/ankurah"

[features]
default        = ["tokio", "reactive-graph"]
tokio          = ["dep:tokio"]
wasm           = ["dep:wasm-bindgen", "dep:js-sys", "dep:wasm-bindgen-futures"]
react          = ["wasm", "dep:send_wrapper"]
jsvalue        = ["wasm", "dep:send_wrapper"]
reactive-graph = ["dep:reactive_graph"]

[dependencies]
tokio          = { version = "1.40", features = ["sync"], optional = true }
tracing        = "0.1"
reactive_graph = { version = "0.2.9", optional = true }

# WASM and React integration (optional)
wasm-bindgen         = { version = "0.2", optional = true }
js-sys               = { version = "0.3", optional = true }
send_wrapper         = { version = "0.6", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }

[dev-dependencies]
tokio              = { version = "1.40", features = ["sync", "macros", "rt", "time"] }
tokio-test         = "0.4"
tracing-subscriber = "0.3"
