[package]
name    = "ankurah-tests"
version = "0.9.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
tracing = "0.1"
ankql = { path = "../ankql", version = "=0.9.0" }
ankurah = { path = "../ankurah", features = [
    "derive",
    "instrument",
    "test-helpers",
], version = "=0.9.0" }
ankurah-storage-sled = { path = "../storage/sled", version = "=0.9.0" }
ankurah-connector-local-process = { path = "../connectors/local-process", version = "=0.9.0" }
ankurah-websocket-client = { path = "../connectors/websocket-client", version = "=0.9.0" }
ankurah-websocket-server = { path = "../connectors/websocket-server", version = "=0.9.0" }
ankurah-storage-common = { path = "../storage/common", version = "=0.9.0" }
tokio = { version = "1.40", features = ["full"] }
tracing-subscriber = "0.3"
ctor = "0.2"
wasm-bindgen = "0"
js-sys = "0"

serde       = { version = "1.0", features = ["derive"] }
ulid        = "1.1"
itertools   = "0.14"
async-trait = "0.1"
serde_json  = "1.0"
rand        = "0.8"
rand_chacha = "0.3"
# C6 crash-recovery: the crash child serializes the committed batch to a
# handoff file so the parent can re-deliver identical events after reopen.
bincode = "1.3.3"
sha2    = "0.10.8"
base64  = "0.22"

# C6 postgres crash arm (feature-gated). The node process dies mid-write while
# the postgres server survives; the parent reopens the same database and checks
# the recovery invariants. Requires Docker, so it is off by default and out of
# the plain `cargo test` job. Enable with `--features postgres-crash`.
ankurah-storage-postgres = { path = "../storage/postgres", version = "=0.9.0", optional = true }
testcontainers           = { version = "0.23", features = ["reusable-containers"], optional = true }
testcontainers-modules   = { version = "0.11.4", features = ["postgres"], optional = true }
bb8                      = { version = "0.9", optional = true }
bb8-postgres             = { version = "0.9", optional = true }
tokio-postgres           = { version = "0.7", optional = true }

[features]
# Enables the postgres crash-recovery arm (scenarios over a real postgres
# container). Requires Docker to be available. Not part of the default build.
postgres-crash = [
    "dep:ankurah-storage-postgres",
    "dep:testcontainers",
    "dep:testcontainers-modules",
    "dep:bb8",
    "dep:bb8-postgres",
    "dep:tokio-postgres",
]
