[package]
name = "ankurah-wasm-signal"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
futures-signals = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
ankurah-derive = { path = "../derive" }
reactive_graph = { version = "0.1.0-rc2", features = ["effects"] }